
syntax = "proto3";

package trial;

message HelloRequest{
    string name = 1; 
    string lastname =2;
}

message HelloReply{
    string message = 1;
}

message ParsingRequest{
    string address = 1;
}

message JsonReply{
    string file = 1;
}


service Trial{

rpc MessageExamples(HelloRequest) returns (HelloReply){}
rpc MainInteraction(ParsingRequest) returns (JsonReply){}

}
